--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -300,7 +300,9 @@
             $("#cat_select").html(dom);
 
             // 请求账号列表
-            loadAccountList();
+            setTimeout(function() {
+                loadAccountList();
+            }, 100);
         });
     }
     
