--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -303,7 +303,7 @@
             setTimeout(function() {
                 loadAccountList();
             }, 100);
-        });
+        },false);
     }
     
     // 获取指定分类下的平台列表
