--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -736,6 +736,7 @@
             get(url,function (data) {
                 var res = data.data;
                 if (res == '无法获取logo'){
+                    addLogo = defaultLogo;
                     toast(res);
                 }else {
                     toast("获取logo成功");
