--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -78,8 +78,8 @@
                 </a>
             </li>
             <li>
-                <a id="icon_depository" class="icon icon-list" href="?m=admin&c=IconDepository&a=index">
-                    <span>图标库</span>
+                <a id="icon_depository" class="icon icon-list" href="?m=admin&c=IconManager&a=index">
+                    <span>图标管理</span>
                 </a>
             </li>
             <li>
