--- a/home/view/account/index.html
+++ b/home/view/account/index.html
@@ -44,7 +44,7 @@
                 var accAttach = accData["hasAttachment"];
                 dom += '<div class="card-content">';
                 dom += '<a href="'+ accAddress +'"  target="_blank" class="card-link" >';
-                dom += '<img class="card-logo" src="'+ accLogo +'" width="40">';
+                dom += '<img class="card-logo" src="'+ accLogo +'">';
                 dom += '<div class="text-content"><div class="card-title"><strong>' + accDesc + '</strong>';
                 if (accRemark.length > 0){
                     accRemark = "'" + accRemark + "'";
