--- a/public/home/css/cards.css
+++ b/public/home/css/cards.css
@@ -88,8 +88,10 @@ h4 i.iconfont {
 }
 
 .card-logo {
-    width: 40px;
-    height: 40px;
+    /*width: 40px;*/
+    /*height: 40px;*/
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     position: absolute;
     left: 10px;
