--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -175,6 +175,16 @@
         margin: 0 auto;
     }
 
+    .login-address-box {
+        width: 400px;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        overflow-y: hidden;
+        overflow-x: scroll;
+    }
+
 </style>
 <{/block}>
 <{block name="scriptCode"}>
@@ -492,7 +502,7 @@
             dom += '<td>'+ account["user"] +'</td>';
             dom += '<td><input pass="'+ account["passwd"] +'" readonly="readonly" type="password" class="layui-input pass-view-input" value="'+ account["passwd"] +'">';
             dom += '<i  accId="'+ account["id"] +'" onclick="previewPass(this)" class="iconfont icon-Xtubiao-chakan translation-icon"></i><i accId="'+ account["id"] +'" id="copy_btn" onclick="copyPass(this)" class="icon icon-reply translation-icon"></i><input class="real-pass" type="text" id="real_pass_'+ account["id"] +'"></td>';
-            dom += '<td>'+ account["address"] +'</td>';
+            dom += '<td><div class="login-address-box">'+ account["address"] +'</div></td>';
             dom += '<td>'+ account["plat_name"] +'</td>';
             dom += '<td><div class="remark-box">'+ account["remark"] +'</div></td>';
             dom += '<td><i title="编辑" onclick="editAccount(this)" accId="'+ account["id"] +'" style="cursor: pointer" class="icon icon-edit"></i>';
