--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -178,6 +178,7 @@
     .login-address-box {
         width: 200px;
         height: 30px;
+        line-height: 30px;
         display: flex;
         flex-direction: row;
         justify-content: center;
