--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -171,6 +171,7 @@
 
     .remark-box {
         max-width: 200px;
+        max-height: 100px;
         overflow: hidden;
         margin: 0 auto;
     }
