--- a/public/common/css/login.css
+++ b/public/common/css/login.css
@@ -16,17 +16,18 @@ html {
 body{
     position: relative;
     height: 100%;
+    background-image: linear-gradient(to top, #537895 0%, #09203f 100%);
 }
 /*隐藏垂直滚动条*/
 #cotent{
     overflow-y: hidden;
 }
 /*背景图片*/
-.bg_img {
-    position:absolute;
-    left:0;
-    top:0;
-    z-index:-1;
-    width: 100%;
-    height: 100%;
-}
+/*.bg_img {*/
+/*    position:absolute;*/
+/*    left:0;*/
+/*    top:0;*/
+/*    z-index:-1;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
